--- a/defconfigs/nginx_defconfig
+++ b/defconfigs/nginx_defconfig
@@ -1,23 +1,16 @@
 BR2_x86_64=y
 BR2_CCACHE=y
-BR2_OPTIMIZE_FAST=y
-BR2_SSP_ALL=y
-BR2_RELRO_FULL=y
-BR2_TOOLCHAIN_BUILDROOT_MUSL=y
-BR2_KERNEL_HEADERS_4_14=y
-BR2_BINUTILS_VERSION_2_31_X=y
+BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_GCC_VERSION_8_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
-BR2_GCC_ENABLE_LTO=y
-BR2_TARGET_GENERIC_HOSTNAME="nginx"
-BR2_TARGET_GENERIC_ISSUE="Welcome to Jamrock"
 BR2_INIT_NONE=y
 # BR2_TARGET_ENABLE_ROOT_LOGIN is not set
-BR2_SYSTEM_BIN_SH_NONE=y
 # BR2_TARGET_GENERIC_GETTY is not set
 # BR2_PACKAGE_BUSYBOX is not set
 BR2_PACKAGE_NGINX=y
 BR2_PACKAGE_NGINX_THREADS=y
 BR2_PACKAGE_NGINX_HTTP_CACHE=y
 BR2_PACKAGE_NGINX_HTTP_SSL_MODULE=y
-BR2_TARGET_ROOTFS_TAR_LZMA=y
+BR2_PACKAGE_NGINX_HTTP_V2_MODULE=y
+# BR2_PACKAGE_NGINX_HTTP_FASTCGI_MODULE is not set
+# BR2_PACKAGE_NGINX_HTTP_UWSGI_MODULE is not set
