--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["zentauro <zentauro@riseup.net>"]
 edition = "2018"
 
 [dependencies]
-clap = "2.32.0"
-git2 = "0.8.0"
-
+clap         = "2.32.0"
+git2         = "0.8.0"
+serde_json   = "1.0"
+serde_derive = "1.0"
