--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ clap         = "2.32.0"
 git2         = "0.8.0"
 serde_json   = "1.0"
 serde_derive = "1.0"
+
+[profile.release]
+codegen-units = 1
+opt-level = 3
+lto = true
